<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".ui.setting.SettingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Noticeme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Noticeme.PopupOverlay">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:background="#00000000"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/noto_bold"
                    android:text="@string/setting_layout_title"
                    android:textColor="#ababab"
                    android:textSize="20sp" />

            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <RelativeLayout
            android:id="@+id/above_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/main_background_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/tv_notification_setting"
            style="@style/SettingTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_notification_setting_title"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/guideline2" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_notification_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/guideline2" />

        <View
            android:id="@+id/boarder_view1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@color/border_view_color"
            ads:layout_constraintTop_toBottomOf="@+id/tv_notification_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_version_title"
            style="@style/SettingTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv_version_info_title"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/boarder_view1" />

        <TextView
            android:id="@+id/tv_version_info"
            style="@style/VersionInfoTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="1.0.0"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/boarder_view1" />

        <View
            android:id="@+id/boarder_view2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@color/border_view_color"
            ads:layout_constraintTop_toBottomOf="@+id/tv_version_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_privacy"
            style="@style/SettingTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv_personal_privacy_policy_title"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/boarder_view2" />

        <ImageView
            android:id="@+id/iv_arrow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_img_arrow_gray"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/boarder_view2" />

        <View
            android:id="@+id/boarder_view3"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@color/border_view_color"
            ads:layout_constraintTop_toBottomOf="@+id/tv_privacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_query"
            style="@style/SettingTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv_query_title"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/boarder_view3" />

        <ImageView
            android:id="@+id/iv_arrow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_img_arrow_gray"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/boarder_view3" />

        <View
            android:id="@+id/boarder_view4"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@color/border_view_color"
            ads:layout_constraintTop_toBottomOf="@+id/tv_query"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_evaluation"
            style="@style/SettingTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv_evaluation_title"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/boarder_view4" />

        <ImageButton
            android:id="@+id/iv_arrow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_img_arrow_gray"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toTopOf="@+id/boarder_view4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>